--- a/publish.prx.org/publish.prx.org.yml
+++ b/publish.prx.org/publish.prx.org.yml
@@ -5,24 +5,10 @@ Mappings:
     PublishApp:
       name: publish-express
 Parameters:
+  # VPC ########################################################################
   VPC:
     Type: "AWS::EC2::VPC::Id"
-  VPCSubnet1:
-    Type: "AWS::EC2::Subnet::Id"
-  VPCSubnet2:
-    Type: "AWS::EC2::Subnet::Id"
-  VPCCertificateArn:
-    Type: String
-  RootStackName:
-    Type: String
-  OpsDebugMessagesSNSTopicArn:
-    Type: String
-  ECSCluster:
-    Type: String
-  ECSServiceAutoscaleIAMRoleArn:
-    Type: String
-  ECSServiceIAMRole:
-    Type: String
+  # Load Balancer ##############################################################
   PlatformALBDNSName:
     Type: String
   PlatformALBCanonicalHostedZoneID:
@@ -35,21 +21,33 @@ Parameters:
     Type: String
   PlatformALBHTTPSListenerPriority:
     Type: String
+  # ECS Cluster ################################################################
+  ECSCluster:
+    Type: String
+  ECSServiceAutoscaleIAMRoleArn:
+    Type: String
+  ECSServiceIAMRole:
+    Type: String
+  # Misc #######################################################################
+  RootStackName:
+    Type: String
+  OpsDebugMessagesSNSTopicArn:
+    Type: String
   EnvironmentTypeAbbreviation:
     Type: String
   ECRRegion:
     Type: String
-  # Shared ENV
+  # Shared ENV #################################################################
   EnvCmsHost:
     Type: String
   EnvIdHost:
     Type: String
   EnvPlayHost:
     Type: String
-  # Publish ECS
+  # Publish ECS ################################################################
   PublishECRImageTag:
     Type: String
-  # Publish ENV
+  # Publish ENV ################################################################
   PublishEnvAuthClientId:
     Type: String
   PublishEnvAwsKey:
