--- a/root.yml
+++ b/root.yml
@@ -265,27 +265,30 @@ Resources:
   #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
   #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
   #     TimeoutInMinutes: "5"
-  # AudiogramStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   DependsOn: ECSClusterStack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #     Parameters:
-  #       VPC: !GetAtt VPCStack.Outputs.VPC
-  #       VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-  #       VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-  #       VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
-  #       RootStackName: !Ref AWS::StackName
-  #       ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
-  #       ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
-  #       ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-  #       ECRRegion: !Ref ECRRegion
-  #       AudiogramECRImageTag: !Ref AudiogramECRImageTag
-  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
-  #     TimeoutInMinutes: "5"
+  AudiogramStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        VPC: !GetAtt VPCStack.Outputs.VPC
+        RootStackName: !Ref AWS::StackName
+        PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDNSName
+        PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
+        PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
+        PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
+        PlatformALBHTTPListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Audiogram, http]
+        PlatformALBHTTPSListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Audiogram, https]
+        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        ECRRegion: !Ref ECRRegion
+        AudiogramECRImageTag: !Ref AudiogramECRImageTag
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
+      TimeoutInMinutes: "5"
   # CmsPipelineStack:
   #   Type: "AWS::CloudFormation::Stack"
   #   Condition: CreateSingletonStacks
@@ -378,9 +381,6 @@ Resources:
         - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       Parameters:
         VPC: !GetAtt VPCStack.Outputs.VPC
-        VPCSubnet1: !GetAtt VPCStack.Outputs.Subnet1
-        VPCSubnet2: !GetAtt VPCStack.Outputs.Subnet2
-        VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
         RootStackName: !Ref AWS::StackName
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
         ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
