--- a/root.yml
+++ b/root.yml
@@ -247,24 +247,24 @@ Resources:
         VPCCertificateArn: !GetAtt CertificateStack.Outputs.CertificateArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/load-balancers.yml"]]
       TimeoutInMinutes: "5"
-  # AudiogramPipelineStack:
-  #   Type: "AWS::CloudFormation::Stack"
-  #   Condition: CreateSingletonStacks
-  #   DependsOn: ECSClusterStack
-  #   Properties:
-  #     NotificationARNs:
-  #       - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #     Parameters:
-  #       CodePipelineArtifactStore: !Ref CodePipelineArtifactStore
-  #       GitHubOAuthToken: !Ref GitHubOAuthToken
-  #       RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
-  #       RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
-  #       EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
-  #       ECRRegion: !Ref ECRRegion
-  #       AudiogramECRImageTag: !Ref AudiogramECRImageTag
-  #       OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
-  #     TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
-  #     TimeoutInMinutes: "5"
+  AudiogramPipelineStack:
+    Type: "AWS::CloudFormation::Stack"
+    Condition: CreateSingletonStacks
+    DependsOn: ECSClusterStack
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        CodePipelineArtifactStore: !Ref CodePipelineArtifactStore
+        GitHubOAuthToken: !Ref GitHubOAuthToken
+        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        ECRRegion: !Ref ECRRegion
+        AudiogramECRImageTag: !Ref AudiogramECRImageTag
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/pipeline.yml"]]
+      TimeoutInMinutes: "5"
   AudiogramStack:
     Type: "AWS::CloudFormation::Stack"
     DependsOn: ECSClusterStack
@@ -492,16 +492,16 @@ Resources:
         LambdaFunctionCodeS3Key: !Ref UploadLambdaZipName
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/upload.prx.org/upload.prx.org.yml"]]
       TimeoutInMinutes: "5"
-# Outputs:
-  # VPCCertificateArn:
-  #   Description: The ARN for the wildcard certificate for the VPC
-  #   Value: !GetAtt CertificateStack.Outputs.CertificateArn
-  # AudiogramHostedZoneDNSName:
-  #   Description: Domain name for audiogram app
-  #   Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
-  # PublishHostedZoneDNSName:
-  #   Description: Domain name for publish app
-  #   Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
+Outputs:
+  VPCCertificateArn:
+    Description: The ARN for the wildcard certificate for the VPC
+    Value: !GetAtt CertificateStack.Outputs.CertificateArn
+  AudiogramHostedZoneDNSName:
+    Description: Domain name for audiogram app
+    Value: !GetAtt AudiogramStack.Outputs.HostedZoneDNSName
+  PublishHostedZoneDNSName:
+    Description: Domain name for publish app
+    Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
   # CmsHostedZoneDNSName:
   #   Description: Domain name for CMS app
   #   Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
