Export Publish DNS name

--- a/root.yml
+++ b/root.yml
@@ -502,6 +502,8 @@ Outputs:
   PublishHostedZoneDNSName:
     Description: Domain name for publish app
     Value: !GetAtt PublishStack.Outputs.HostedZoneDNSName
+    Export:
+      Name: !Sub "${AWS::StackName}-PublishHostedZoneDNSName"
   # CmsHostedZoneDNSName:
   #   Description: Domain name for CMS app
   #   Value: !GetAtt CmsStack.Outputs.HostedZoneDNSName
