Add bogus resource to CMS proxy

--- a/cms-proxy.yml
+++ b/cms-proxy.yml
@@ -38,3 +38,18 @@ Parameters:
     Type: String
   CmsEnvRailsSecretKey:
     Type: String
+Resources:
+  CMSProxyIAMRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      Path: "/"
+      Policies:
+        - PolicyName: StatusSNSPublishPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Deny
+                Action:
+                  - "*"
+                Resource:
+                  - "*"
