Fix IAM proxy policy

--- a/cms-proxy.yml
+++ b/cms-proxy.yml
@@ -42,6 +42,15 @@ Resources:
   CMSProxyIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - codepipeline.amazonaws.com
+            Action:
+              - "sts:AssumeRole"
       Path: "/"
       Policies:
         - PolicyName: StatusSNSPublishPolicy
