Start working on proxy exports

--- a/cms-proxy.yml
+++ b/cms-proxy.yml
@@ -39,6 +39,7 @@ Parameters:
   CmsEnvRailsSecretKey:
     Type: String
 Resources:
+  # TODO this should do nothing
   CMSProxyIAMRole:
     Type: "AWS::IAM::Role"
     Properties:
@@ -62,3 +63,9 @@ Resources:
                   - "*"
                 Resource:
                   - "*"
+# Outputs:
+#   CmsEnvRailsSecretKey:
+#     Description: CmsEnvRailsSecretKey
+#     Value: !Ref CmsEnvRailsSecretKey
+#     Export:
+#       Name: !Sub "${AWS::StackName}-PublishHostedZoneDNSName"
