--- a/root.yml
+++ b/root.yml
@@ -27,6 +27,9 @@ Mappings:
     Audiogram:
       http: 2
       https: 2
+    Castle:
+      http: 3
+      https: 3
 Conditions:
   CreateSingletonStacks: !And
     - !Equals [!Ref RootEnvironmentType, Staging]
@@ -98,6 +101,26 @@ Parameters:
   ##############################################################################
   ##############################################################################
   AudiogramECRImageTag:
+    Type: String
+  CastleECRImageTag:
+    Type: String
+  CastleEnvBqClientEmail:
+    Type: String
+  CastleEnvBqDataset:
+    Type: String
+  CastleEnvBqDownloadsTable:
+    Type: String
+  CastleEnvBqImpressionsTable:
+    Type: String
+  CastleEnvBqPrivateKey:
+    Type: String
+  CastleEnvBqProjectId:
+    Type: String
+  CastleEnvRedisHost:
+    Type: String
+  CastleEnvRedisPoolSize:
+    Type: String
+  CastleEnvRedisPort:
     Type: String
   PublishECRImageTag:
     Type: String
@@ -250,6 +273,59 @@ Resources:
         AudiogramECRImageTag: !Ref AudiogramECRImageTag
         OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/audiogram/audiogram.yml"]]
+      TimeoutInMinutes: "5"
+################################################################################
+#### CASTLE ####################################################################
+################################################################################
+  CastlePipelineStack:
+    Type: "AWS::CloudFormation::Stack"
+    Condition: CreateSingletonStacks
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        CodePipelineArtifactStore: !Ref CodePipelineArtifactStore
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        GitHubOAuthToken: !Ref GitHubOAuthToken
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
+        RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
+        ECRRegion: !Ref ECRRegion
+        CastleECRImageTag: !Ref CastleECRImageTag
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/castle.prx.org/pipeline.yml"]]
+      TimeoutInMinutes: "5"
+  CastleStack:
+    Type: "AWS::CloudFormation::Stack"
+    DependsOn: ECSClusterStack
+    Properties:
+      NotificationARNs:
+        - !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+      Parameters:
+        VPC: !GetAtt VPCStack.Outputs.VPC
+        RootStackName: !Ref AWS::StackName
+        OpsDebugMessagesSNSTopicArn: !GetAtt NotificationsStack.Outputs.OpsDebugMessagesSNSTopicArn
+        ECSCluster: !GetAtt ECSClusterStack.Outputs.ECSCluster
+        ECSServiceAutoscaleIAMRoleArn: !GetAtt ECSClusterStack.Outputs.ECSServiceAutoscaleIAMRoleArn
+        ECSServiceIAMRole: !GetAtt ECSClusterStack.Outputs.ECSServiceIAMRole
+        PlatformALBDNSName: !GetAtt LoadBalancersStack.Outputs.PlatformALBDNSName
+        PlatformALBCanonicalHostedZoneID: !GetAtt LoadBalancersStack.Outputs.PlatformALBCanonicalHostedZoneID
+        PlatformALBHTTPListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPListenerArn
+        PlatformALBHTTPSListenerArn: !GetAtt LoadBalancersStack.Outputs.PlatformALBHTTPSListenerArn
+        PlatformALBHTTPListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Castle, http]
+        PlatformALBHTTPSListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Castle, https]
+        EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
+        ECRRegion: !Ref ECRRegion
+        CastleECRImageTag: !Ref CastleECRImageTag
+        CastleEnvBqClientEmail: !Ref CastleEnvBqClientEmail
+        CastleEnvBqDataset: !Ref CastleEnvBqDataset
+        CastleEnvBqDownloadsTable: !Ref CastleEnvBqDownloadsTable
+        CastleEnvBqImpressionsTable: !Ref CastleEnvBqImpressionsTable
+        CastleEnvBqPrivateKey: !Ref CastleEnvBqPrivateKey
+        CastleEnvBqProjectId: !Ref CastleEnvBqProjectId
+        CastleEnvRedisHost: !Ref CastleEnvRedisHost
+        CastleEnvRedisPoolSize: !Ref CastleEnvRedisPoolSize
+        CastleEnvRedisPort: !Ref CastleEnvRedisPort
+      TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/castle.prx.org/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   # CmsPipelineStack:
   #   Type: "AWS::CloudFormation::Stack"
