Add in basic auth

--- a/castle.prx.org/castle-proxy.yml
+++ b/castle.prx.org/castle-proxy.yml
@@ -28,6 +28,14 @@ Outputs:
     Value: !Ref CastleECRImageTag
     Export:
       Name: !Sub "${AWS::Region}-CastleECRImageTag"
+  CastleEnvBasicAuthPass:
+    Value: !Ref CastleEnvBasicAuthPass
+    Export:
+      Name: !Sub "${AWS::Region}-CastleEnvBasicAuthPass"
+  CastleEnvBasicAuthUser:
+    Value: !Ref CastleEnvBasicAuthUser
+    Export:
+      Name: !Sub "${AWS::Region}-CastleEnvBasicAuthUser"
   CastleEnvBqClientEmail:
     Value: !Ref CastleEnvBqClientEmail
     Export:
