--- a/castle.prx.org/castle.prx.org.yml
+++ b/castle.prx.org/castle.prx.org.yml
@@ -42,6 +42,10 @@ Parameters:
   CastleECRImageTag:
     Type: String
   # Castle ENV #################################################################
+  CastleEnvBasicAuthPass:
+    Type: String
+  CastleEnvBasicAuthUser:
+    Type: String
   CastleEnvBqClientEmail:
     Type: String
   CastleEnvBqDataset:
@@ -105,6 +109,10 @@ Resources:
       ContainerDefinitions:
         - Cpu: 128
           Environment:
+            - Name: BASIC_AUTH_PASS
+              Value: !Ref CastleEnvBasicAuthPass
+            - Name: BASIC_AUTH_USER
+              Value: !Ref CastleEnvBasicAuthUser
             - Name: BQ_CLIENT_EMAIL
               Value: !Ref CastleEnvBqClientEmail
             - Name: BQ_DATASET
