--- a/root.yml
+++ b/root.yml
@@ -296,6 +296,8 @@ Resources:
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
         CastleECRImageTag: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleECRImageTag"]]
+        CastleEnvBasicAuthPass: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBasicAuthPass"]]
+        CastleEnvBasicAuthUser: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBasicAuthUser"]]
         CastleEnvBqClientEmail: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqClientEmail"]]
         CastleEnvBqDataset: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqDataset"]]
         CastleEnvBqDownloadsTable: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqDownloadsTable"]]
