Add missing inputs

--- a/castle.prx.org/castle-proxy.yml
+++ b/castle.prx.org/castle-proxy.yml
@@ -2,6 +2,10 @@ AWSTemplateFormatVersion: "2010-09-09"
 Parameters:
   CastleECRImageTag:
     Type: String
+  CastleEnvBasicAuthPass:
+    Type: String
+  CastleEnvBasicAuthUser:
+    Type: String
   CastleEnvBqClientEmail:
     Type: String
   CastleEnvBqDataset:
