Split key up to avoid 1024 limit

--- a/castle.prx.org/castle.prx.org.yml
+++ b/castle.prx.org/castle.prx.org.yml
@@ -54,7 +54,9 @@ Parameters:
     Type: String
   CastleEnvBqImpressionsTable:
     Type: String
-  CastleEnvBqPrivateKey:
+  CastleEnvBqPrivateKey1:
+    Type: String
+  CastleEnvBqPrivateKey2:
     Type: String
   CastleEnvBqProjectId:
     Type: String
@@ -123,6 +125,7 @@ Resources:
               Value: !Ref CastleEnvBqImpressionsTable
             - Name: BQ_PRIVATE_KEY
               Value: !Ref CastleEnvBqPrivateKey
+              Value: !Join ["", [!Ref "CastleEnvBqPrivateKey1", !Ref "CastleEnvBqPrivateKey2"]]
             - Name: BQ_PROJECT_ID
               Value: !Ref CastleEnvBqProjectId
             - Name: REDIS_HOST
