--- a/root.yml
+++ b/root.yml
@@ -302,7 +302,8 @@ Resources:
         CastleEnvBqDataset: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqDataset"]]
         CastleEnvBqDownloadsTable: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqDownloadsTable"]]
         CastleEnvBqImpressionsTable: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqImpressionsTable"]]
-        CastleEnvBqPrivateKey: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqPrivateKey"]]
+        CastleEnvBqPrivateKey1: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqPrivateKey1"]]
+        CastleEnvBqPrivateKey2: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqPrivateKey2"]]
         CastleEnvBqProjectId: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqProjectId"]]
         CastleEnvRedisHost: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvRedisHost"]]
         CastleEnvRedisPoolSize: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvRedisPoolSize"]]
