--- a/castle.prx.org/castle-proxy.yml
+++ b/castle.prx.org/castle-proxy.yml
@@ -14,7 +14,9 @@ Parameters:
     Type: String
   CastleEnvBqImpressionsTable:
     Type: String
-  CastleEnvBqPrivateKey:
+  CastleEnvBqPrivateKey1:
+    Type: String
+  CastleEnvBqPrivateKey2:
     Type: String
   CastleEnvBqProjectId:
     Type: String
@@ -56,10 +58,14 @@ Outputs:
     Value: !Ref CastleEnvBqImpressionsTable
     Export:
       Name: !Sub "${AWS::Region}-CastleEnvBqImpressionsTable"
-  CastleEnvBqPrivateKey:
-    Value: !Ref CastleEnvBqPrivateKey
+  CastleEnvBqPrivateKey1:
+    Value: !Ref CastleEnvBqPrivateKey1
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqPrivateKey"
+      Name: !Sub "${AWS::Region}-CastleEnvBqPrivateKey1"
+  CastleEnvBqPrivateKey2:
+    Value: !Ref CastleEnvBqPrivateKey2
+    Export:
+      Name: !Sub "${AWS::Region}-CastleEnvBqPrivateKey2"
   CastleEnvBqProjectId:
     Value: !Ref CastleEnvBqProjectId
     Export:
