Add env type to outputs

--- a/castle.prx.org/castle-proxy.yml
+++ b/castle.prx.org/castle-proxy.yml
@@ -1,5 +1,7 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Parameters:
+  RootEnvironmentType:
+    Type: String
   CastleECRImageTag:
     Type: String
   CastleEnvBasicAuthPass:
@@ -33,52 +35,52 @@ Outputs:
   CastleECRImageTag:
     Value: !Ref CastleECRImageTag
     Export:
-      Name: !Sub "${AWS::Region}-CastleECRImageTag"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleECRImageTag"
   CastleEnvBasicAuthPass:
     Value: !Ref CastleEnvBasicAuthPass
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBasicAuthPass"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBasicAuthPass"
   CastleEnvBasicAuthUser:
     Value: !Ref CastleEnvBasicAuthUser
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBasicAuthUser"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBasicAuthUser"
   CastleEnvBqClientEmail:
     Value: !Ref CastleEnvBqClientEmail
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqClientEmail"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqClientEmail"
   CastleEnvBqDataset:
     Value: !Ref CastleEnvBqDataset
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqDataset"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqDataset"
   CastleEnvBqDownloadsTable:
     Value: !Ref CastleEnvBqDownloadsTable
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqDownloadsTable"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqDownloadsTable"
   CastleEnvBqImpressionsTable:
     Value: !Ref CastleEnvBqImpressionsTable
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqImpressionsTable"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqImpressionsTable"
   CastleEnvBqPrivateKey1:
     Value: !Ref CastleEnvBqPrivateKey1
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqPrivateKey1"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqPrivateKey1"
   CastleEnvBqPrivateKey2:
     Value: !Ref CastleEnvBqPrivateKey2
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqPrivateKey2"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqPrivateKey2"
   CastleEnvBqProjectId:
     Value: !Ref CastleEnvBqProjectId
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvBqProjectId"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqProjectId"
   CastleEnvRedisHost:
     Value: !Ref CastleEnvRedisHost
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvRedisHost"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisHost"
   CastleEnvRedisPoolSize:
     Value: !Ref CastleEnvRedisPoolSize
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvRedisPoolSize"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisPoolSize"
   CastleEnvRedisPort:
     Value: !Ref CastleEnvRedisPort
     Export:
-      Name: !Sub "${AWS::Region}-CastleEnvRedisPort"
+      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisPort"
