--- a/root.yml
+++ b/root.yml
@@ -271,7 +271,7 @@ Resources:
         RootStackTemplateConfigBucket: !Ref RootStackTemplateConfigBucket
         RootStackTemplateConfigArchive: !Ref RootStackTemplateConfigArchive
         ECRRegion: !Ref ECRRegion
-        CastleECRImageTag: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleECRImageTag"]]
+        CastleECRImageTag: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleECRImageTag"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/castle.prx.org/pipeline.yml"]]
       TimeoutInMinutes: "5"
   CastleStack:
@@ -295,19 +295,19 @@ Resources:
         PlatformALBHTTPSListenerPriority: !FindInMap [ALBListenerRulePriorityMap, Castle, https]
         EnvironmentTypeAbbreviation: !FindInMap [EnvironmentTypeAbbreviationMap, !Ref RootEnvironmentType, abbreviation]
         ECRRegion: !Ref ECRRegion
-        CastleECRImageTag: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleECRImageTag"]]
-        CastleEnvBasicAuthPass: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBasicAuthPass"]]
-        CastleEnvBasicAuthUser: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBasicAuthUser"]]
-        CastleEnvBqClientEmail: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqClientEmail"]]
-        CastleEnvBqDataset: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqDataset"]]
-        CastleEnvBqDownloadsTable: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqDownloadsTable"]]
-        CastleEnvBqImpressionsTable: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqImpressionsTable"]]
-        CastleEnvBqPrivateKey1: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqPrivateKey1"]]
-        CastleEnvBqPrivateKey2: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqPrivateKey2"]]
-        CastleEnvBqProjectId: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvBqProjectId"]]
-        CastleEnvRedisHost: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvRedisHost"]]
-        CastleEnvRedisPoolSize: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvRedisPoolSize"]]
-        CastleEnvRedisPort: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-CastleEnvRedisPort"]]
+        CastleECRImageTag: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleECRImageTag"]]
+        CastleEnvBasicAuthPass: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBasicAuthPass"]]
+        CastleEnvBasicAuthUser: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBasicAuthUser"]]
+        CastleEnvBqClientEmail: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqClientEmail"]]
+        CastleEnvBqDataset: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqDataset"]]
+        CastleEnvBqDownloadsTable: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqDownloadsTable"]]
+        CastleEnvBqImpressionsTable: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqImpressionsTable"]]
+        CastleEnvBqPrivateKey1: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqPrivateKey1"]]
+        CastleEnvBqPrivateKey2: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqPrivateKey2"]]
+        CastleEnvBqProjectId: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqProjectId"]]
+        CastleEnvRedisHost: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisHost"]]
+        CastleEnvRedisPoolSize: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisPoolSize"]]
+        CastleEnvRedisPort: !Join ["", ["Fn::ImportValue": !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisPort"]]
       TemplateURL: !Join ["", ["http://s3-", !Ref "AWS::Region", ".amazonaws.com/", "Fn::ImportValue": !Sub "${BootstrapStackName}-${RootEnvironmentType}-TemplateBucket", "/castle.prx.org/castle.prx.org.yml"]]
       TimeoutInMinutes: "5"
   # CmsPipelineStack:
