--- a/castle.prx.org/castle-proxy.yml
+++ b/castle.prx.org/castle-proxy.yml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: "2010-09-09"
 Parameters:
-  RootEnvironmentType:
+  BootstrapEnvironmentType:
     Type: String
   CastleECRImageTag:
     Type: String
@@ -35,52 +35,52 @@ Outputs:
   CastleECRImageTag:
     Value: !Ref CastleECRImageTag
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleECRImageTag"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleECRImageTag"
   CastleEnvBasicAuthPass:
     Value: !Ref CastleEnvBasicAuthPass
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBasicAuthPass"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBasicAuthPass"
   CastleEnvBasicAuthUser:
     Value: !Ref CastleEnvBasicAuthUser
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBasicAuthUser"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBasicAuthUser"
   CastleEnvBqClientEmail:
     Value: !Ref CastleEnvBqClientEmail
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqClientEmail"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBqClientEmail"
   CastleEnvBqDataset:
     Value: !Ref CastleEnvBqDataset
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqDataset"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBqDataset"
   CastleEnvBqDownloadsTable:
     Value: !Ref CastleEnvBqDownloadsTable
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqDownloadsTable"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBqDownloadsTable"
   CastleEnvBqImpressionsTable:
     Value: !Ref CastleEnvBqImpressionsTable
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqImpressionsTable"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBqImpressionsTable"
   CastleEnvBqPrivateKey1:
     Value: !Ref CastleEnvBqPrivateKey1
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqPrivateKey1"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBqPrivateKey1"
   CastleEnvBqPrivateKey2:
     Value: !Ref CastleEnvBqPrivateKey2
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqPrivateKey2"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBqPrivateKey2"
   CastleEnvBqProjectId:
     Value: !Ref CastleEnvBqProjectId
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvBqProjectId"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvBqProjectId"
   CastleEnvRedisHost:
     Value: !Ref CastleEnvRedisHost
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisHost"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvRedisHost"
   CastleEnvRedisPoolSize:
     Value: !Ref CastleEnvRedisPoolSize
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisPoolSize"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvRedisPoolSize"
   CastleEnvRedisPort:
     Value: !Ref CastleEnvRedisPort
     Export:
-      Name: !Sub "${AWS::Region}-${RootEnvironmentType}-CastleEnvRedisPort"
+      Name: !Sub "${AWS::Region}-${BootstrapEnvironmentType}-CastleEnvRedisPort"
