--- a/castle.prx.org/pipeline.yml
+++ b/castle.prx.org/pipeline.yml
@@ -138,6 +138,7 @@ Resources:
       ArtifactStore:
         Location: !Ref CodePipelineArtifactStore
         Type: S3
+      Name: castle.prx.org
       RestartExecutionOnUpdate: false
       RoleArn: !GetAtt CodePipelineIAMRole.Arn
       Stages:
