--- a/ci/ci.yaml
+++ b/ci/ci.yaml
@@ -2,6 +2,10 @@ AWSTemplateFormatVersion: "2010-09-09"
 Description: >
   Creates a continuous integration system to handle testing, building, and
   pushing assets in response to changes on GitHub
+Mappings:
+  Shared:
+    SourceArchives:
+      Key: github-source-archive.zip
 Parameters:
   GitHubToken:
      Type: String
@@ -10,6 +14,16 @@ Parameters:
   LambdaCodeBucket:
     Type: String
 Resources:
+  # S3 Buckets
+  SourceArchiveBucket:
+    Type: "AWS::S3::Bucket"
+    DeletionPolicy: Retain
+    Properties:
+      Tags:
+        - Key: Project
+          Value: CI
+      VersioningConfiguration:
+        Status: Enabled
   # SNS Topics
   GitHubEventSNSTopic:
     Type: "AWS::SNS::Topic"
@@ -65,17 +79,65 @@ Resources:
                 Resource:
                   - !Ref GitHubEventSNSTopic
                   - !Ref CiStatusSNSTopic
-        # - PolicyName: CodeBuildPolicy
-        #   PolicyDocument:
-        #     Version: "2012-10-17"
-        #     Statement:
-        #       - Effect: Allow
-        #         Action:
-        #           - "codebuild:StartBuild"
-        #         Resource:
-        #           - !Ref GitHubEventSNSTopic
+        - PolicyName: S3Policy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:putObject"
+                Resource:
+                  - !Sub arn:aws:s3:::${SourceArchiveBucket}/*
+        - PolicyName: CodeBuildPolicy
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "codebuild:StartBuild"
+                Resource:
+                  - !GetAtt CodeBuildProject.Arn
       ManagedPolicyArns:
         - "arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole"
+  CodeBuildIAMRole:
+    Type: "AWS::IAM::Role"
+    Properties:
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - codebuild.amazonaws.com
+            Action:
+              - "sts:AssumeRole"
+      Path: "/"
+      Policies:
+        - PolicyName: CodeBuildLogs
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "logs:CreateLogGroup"
+                  - "logs:CreateLogStream"
+                  - "logs:PutLogEvents"
+                Resource:
+                  # NOTE The project name in this ARN must stay in sync with the
+                  # actual project name, but can't be referenced because of
+                  # a circular dep.
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-CI
+                  - !Sub arn:aws:logs:${AWS::Region}:${AWS::AccountId}:log-group:/aws/codebuild/${AWS::StackName}-CI:*
+        - PolicyName: SourceArchiveBucketBasicAccess
+          PolicyDocument:
+            Version: "2012-10-17"
+            Statement:
+              - Effect: Allow
+                Action:
+                  - "s3:GetObject"
+                  - "s3:GetObjectVersion"
+                Resource:
+                  - !Sub arn:aws:s3:::${SourceArchiveBucket}/*
   # Lambda Functions
   GitHubWebhookEndpointLambdaFunction:
     Type: "AWS::Lambda::Function"
@@ -101,12 +163,15 @@ Resources:
       Environment:
         Variables:
             GITHUB_ACCESS_TOKEN: !Ref GitHubToken
-            CI_STATUS_TOPIC_ARN: !Ref # TODO
+            CI_STATUS_TOPIC_ARN: !Ref CiStatusSNSTopic
+            CODEBUILD_PROJECT_NAME: !Ref CodeBuildProject
+            SOURCE_ARCHIVE_BUCKET: !Ref SourceArchiveBucket
+            SOURCE_ARCHIVE_KEY: !FindInMap [Shared, SourceArchives, Key]
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
-      Timeout: 3
+      Timeout: 16
   CodeBuildCallbackHanlderLambdaFunction:
     Type: "AWS::Lambda::Function"
     Properties:
@@ -184,3 +249,28 @@ Resources:
       FunctionName: !Ref GitHubWebhookEndpointLambdaFunction
       Principal: apigateway.amazonaws.com
       SourceArn: !Sub "arn:aws:execute-api:${AWS::Region}:${AWS::AccountId}:${RestApi}/${RestApiProdStage}/*"  # TOD This isn't quite right. Reference one made by the console to correct
+  # CodeBuild Projects
+  CodeBuildProject:
+    Type: "AWS::CodeBuild::Project"
+    Properties:
+      Artifacts:
+        Type: NO_ARTIFACTS
+      # Description: String
+      # EncryptionKey: String
+      Environment:
+        ComputeType: BUILD_GENERAL1_SMALL
+        # EnvironmentVariables:
+        #   - EnvironmentVariables
+        Image: "aws/codebuild/docker:1.12.1"
+        Type: LINUX_CONTAINER
+      # NOTE If Name changes, the CodeBuild Role Logs policy also must change
+      Name: !Sub ${AWS::StackName}-CI
+      ServiceRole: !GetAtt CodeBuildIAMRole.Arn
+      Source:
+        BuildSpec: "version: 0.1\n\nphases:\n  build:\n    commands:\n      - curl -sO https://raw.githubusercontent.com/PRX/Infrastructure/codebuild/scripts/bootstrap.sh && sh bootstrap.sh"
+        Location: !Join ["", ["arn:aws:s3:::", !Ref SourceArchiveBucket, "/", !FindInMap [Shared, SourceArchives, Key]]]
+        Type: S3
+      Tags:
+        - Key: Project
+          Value: CI
+      TimeoutInMinutes: 16
