--- a/ci/ci.yaml
+++ b/ci/ci.yaml
@@ -144,7 +144,7 @@ Resources:
     Properties:
       Code:
         ZipFile: "exports.handler = (event, context, callback) => {}"
-      Description: Backs the GitHub webook payload requests endpoint
+      Description: Backs the GitHub webhook payload requests endpoint
       Environment:
         Variables:
           GITHUB_WEBHOOK_SECRET: !Ref GitHubWebhookSecret
