Add Lambda alarms

--- a/ci/ci.yaml
+++ b/ci/ci.yaml
@@ -186,6 +186,47 @@ Resources:
       Role: !GetAtt LambdaExecutionIAMRole.Arn
       Runtime: nodejs6.10
       Timeout: 3
+  # Lambda Alarms
+  GitHubWebhookEndpointErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: GitHub Webhook Endpoint Lambda Errors
+      # AlarmActions:
+      #   - !Ref OpsWarnMessagesSNSTopicArn
+      AlarmDescription: >
+        The error rate on the GitHub webhook endpoint lambda has exceeded 0 in
+        the last five minutes.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "300"
+      Statistic: Sum
+      Threshold: "0"
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref GitHubWebhookEndpointLambdaFunction
+  GitHubEventHandlerErrorAlarm:
+    Type: "AWS::CloudWatch::Alarm"
+    Properties:
+      ActionsEnabled: true
+      AlarmName: GitHub Event Handler Lambda Errors
+      # AlarmActions:
+      #   - !Ref OpsWarnMessagesSNSTopicArn
+      AlarmDescription: >
+        The error rate on the GitHub event handler lambda has exceeded 0 in
+        the last five minutes.
+      ComparisonOperator: GreaterThanThreshold
+      EvaluationPeriods: "1"
+      MetricName: Errors
+      Namespace: AWS/Lambda
+      Period: "300"
+      Statistic: Sum
+      Threshold: "0"
+      Dimensions:
+        - Name: FunctionName
+          Value: !Ref GitHubEventHandlerLambdaFunction
   # API Gateway Deployments
   ## /
   RestApi:
