--- a/ci/ci.yaml
+++ b/ci/ci.yaml
@@ -143,7 +143,8 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        ZipFile: "exports.handler = (event, context, callback) => {}"
+        S3Bucket: !Ref LambdaCodeBucket
+        S3Key: ci/github-webhook-endpoint.zip
       Description: Backs the GitHub webhook payload requests endpoint
       Environment:
         Variables:
@@ -158,7 +159,8 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        ZipFile: "exports.handler = (event, context, callback) => {}"
+        S3Bucket: !Ref LambdaCodeBucket
+        S3Key: ci/github-event-handler.zip
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
         Variables:
@@ -176,11 +178,13 @@ Resources:
     Type: "AWS::Lambda::Function"
     Properties:
       Code:
-        ZipFile: "exports.handler = (event, context, callback) => {}"
+        S3Bucket: !Ref LambdaCodeBucket
+        S3Key: ci/codebuild-callback-handler.zip
       Description: Handles GitHub events forwarded from the endpoint
       Environment:
         Variables:
           GITHUB_TOKEN: !Ref GitHubToken
+          CI_STATUS_TOPIC_ARN: !Ref CiStatusSNSTopic
       Handler: index.handler
       MemorySize: 128
       Role: !GetAtt LambdaExecutionIAMRole.Arn
